调整了图标大小，去除了聊天记录的获取（所有记录不适合）

--- a/common/free.css
+++ b/common/free.css
@@ -225,6 +225,7 @@
 .font { font-size: 30upx;}
 .font-md { font-size: 35upx;}
 .font-lg { font-size: 40upx;}
+.font-vg { font-size: 55upx;}
 .h1{font-size:80upx; line-height:1.8;}
 .h2{font-size:60upx; line-height:1.8;}
 .h3{font-size:45upx; line-height:1.8;}
