--- a/common/free.css
+++ b/common/free.css
@@ -304,7 +304,7 @@
 .text-light-muted { color: #A9A5A0;}
 .text-light-black { color: rgba(0, 0, 0, 0.5);}
 .text-light-white { color: rgba(255, 255, 255, 0.5);}
-
+.text-blue{color:#1f6caf}
 /* 背景颜色 */
 .bg-primary { background-color: #007bff;}
 .bg-hover-primary:hover{ background-color: #0062cc;}
